Update property names

--- a/docs/docs/cmd/tenant/people/people-profilecardproperty-remove.mdx
+++ b/docs/docs/cmd/tenant/people/people-profilecardproperty-remove.mdx
@@ -16,7 +16,7 @@ m365 tenant people profilecardproperty remove [options]
 
 ```md definition-list
 `-n, --name <name>`
-: The name of the property to remove. Allowed values: `userPrincipalName`, `faxNumber`, `streetAddress`, `postalCode`, `state`, `mailNickname`, `customAttribute1`, `customAttribute2`, `customAttribute3`, `customAttribute4`, `customAttribute5`, `customAttribute6`, `customAttribute7`, `customAttribute8`, `customAttribute9`, `customAttribute10`, `customAttribute11`, `customAttribute12`, `customAttribute13`, `customAttribute14`, `customAttribute15`
+: The name of the property to remove. Allowed values: `userPrincipalName`, `fax`, `streetAddress`, `postalCode`, `stateOrProvince`, `alias`, `customAttribute1`, `customAttribute2`, `customAttribute3`, `customAttribute4`, `customAttribute5`, `customAttribute6`, `customAttribute7`, `customAttribute8`, `customAttribute9`, `customAttribute10`, `customAttribute11`, `customAttribute12`, `customAttribute13`, `customAttribute14`, `customAttribute15`
 
 `-f, --force`
 : Don't prompt for confirmation.
