--- a/docs/docs/cmd/tenant/people/people-profilecardproperty-remove.mdx
+++ b/docs/docs/cmd/tenant/people/people-profilecardproperty-remove.mdx
@@ -43,13 +43,13 @@ When removing an attribute from a profile card, it takes up to 24 hours for the 
 Removes the UPN as a profile property from the profile cards
 
 ```sh
-m365 tenant people profilecardproperty remove --name userPrincipalName
+m365 tenant people profilecardproperty remove --name UserPrincipalName
 ```
 
 Removes the UPN as a profile property from the profile cards, without showing a confirmation prompt
 
 ```sh
-m365 tenant people profilecardproperty remove --name userPrincipalName --force
+m365 tenant people profilecardproperty remove --name UserPrincipalName --force
 ```
 
 ## Response
