Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -15,6 +15,13 @@ sidebar_position: 4
 - [aad administrativeunit list](../cmd/aad/administrativeunit/administrativeunit-list.mdx) - retrieves a list of administrative units in Azure AD [#5569](https://github.com/pnp/cli-microsoft365/issues/5569)
 - [aad administrativeunit remove](../cmd/aad/administrativeunit/administrativeunit-remove.mdx) - removes an administrative unit from Azure AD [#5595](https://github.com/pnp/cli-microsoft365/issues/5595)
 
+**Microsoft 365 tenant**
+
+- [tenant people profilecardproperty add](../cmd/tenant/people/people-profilecardproperty-add.mdx) - adds an additional attribute to the profile card properties [#5617](https://github.com/pnp/cli-microsoft365/issues/5617)
+- [tenant people profilecardproperty get](../cmd/tenant/people/people-profilecardproperty-get.mdx) - retrieves information about a specific profile card property [#5623](https://github.com/pnp/cli-microsoft365/issues/5623)
+- [tenant people profilecardproperty list](../cmd/tenant/people/people-profilecardproperty-list.mdx) - lists all profile card properties [#5618](https://github.com/pnp/cli-microsoft365/issues/5618)
+- [tenant people profilecardproperty remove](../cmd/tenant/people/people-profilecardproperty-remove.mdx) - removes an additional attribute from the profile card properties [#5620](https://github.com/pnp/cli-microsoft365/issues/5620)
+
 ### Changes
 
 - fixes command sorting [#5606](https://github.com/pnp/cli-microsoft365/issues/5606)
@@ -23,6 +30,7 @@ sidebar_position: 4
 - extended 'spfx project upgrade' with support for v1.18.1.-rc.0 [#5593](https://github.com/pnp/cli-microsoft365/issues/5593)
 - extended 'spfx doctor' with support for v1.18.1.-rc.0 [#5593](https://github.com/pnp/cli-microsoft365/issues/5593)
 - extended 'spfx project doctor' with support for v1.18.1.-rc.0 [#5593](https://github.com/pnp/cli-microsoft365/issues/5593)
+- adds website preview image
 
 ## [v7.1.0](https://github.com/pnp/cli-microsoft365/releases/tag/v7.1.0)
 
