Fixes anomalies for 'tenant people profilecardproperty' commands

--- a/docs/docs/cmd/tenant/people/people-profilecardproperty-get.mdx
+++ b/docs/docs/cmd/tenant/people/people-profilecardproperty-get.mdx
@@ -95,3 +95,7 @@ m365 tenant people profilecardproperty get --name customAttribute1
 
   </TabItem>
 </Tabs>
+
+## More information
+
+- https://learn.microsoft.com/graph/add-properties-profilecard
