Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -21,16 +21,20 @@ sidebar_position: 4
 - [tenant people profilecardproperty get](../cmd/tenant/people/people-profilecardproperty-get.mdx) - retrieves information about a specific profile card property [#5623](https://github.com/pnp/cli-microsoft365/issues/5623)
 - [tenant people profilecardproperty list](../cmd/tenant/people/people-profilecardproperty-list.mdx) - lists all profile card properties [#5618](https://github.com/pnp/cli-microsoft365/issues/5618)
 - [tenant people profilecardproperty remove](../cmd/tenant/people/people-profilecardproperty-remove.mdx) - removes an additional attribute from the profile card properties [#5620](https://github.com/pnp/cli-microsoft365/issues/5620)
+- [tenant people profilecardproperty set](../cmd/tenant/people/people-profilecardproperty-set.mdx) - updates a custom attribute to the profile card property [#5626](https://github.com/pnp/cli-microsoft365/issues/5626)
 
 ### Changes
 
-- fixes command sorting [#5606](https://github.com/pnp/cli-microsoft365/issues/5606)
-- implements disambiguation prompts in missing places [#5490](https://github.com/pnp/cli-microsoft365/issues/5490)
-- adds a disambiguation prompt to getGroupIdByDisplayName [#5592](https://github.com/pnp/cli-microsoft365/issues/5592)
+- fixed command sorting [#5606](https://github.com/pnp/cli-microsoft365/issues/5606)
+- implemented disambiguation prompts in missing places [#5490](https://github.com/pnp/cli-microsoft365/issues/5490)
+- added a disambiguation prompt to getGroupIdByDisplayName [#5592](https://github.com/pnp/cli-microsoft365/issues/5592)
 - extended 'spfx project upgrade' with support for v1.18.1.-rc.0 [#5593](https://github.com/pnp/cli-microsoft365/issues/5593)
 - extended 'spfx doctor' with support for v1.18.1.-rc.0 [#5593](https://github.com/pnp/cli-microsoft365/issues/5593)
 - extended 'spfx project doctor' with support for v1.18.1.-rc.0 [#5593](https://github.com/pnp/cli-microsoft365/issues/5593)
-- adds website preview image
+- added website preview image
+- fixed anomalies for 'tenant people profilecardproperty' commands
+- added new script sample that lists information on decluttering teams
+- updated contributing docs adding codespaces and dev container page [#5206](https://github.com/pnp/cli-microsoft365/issues/5206)
 
 ## [v7.1.0](https://github.com/pnp/cli-microsoft365/releases/tag/v7.1.0)
 
