Adds new contributor

--- a/docs/docs/about/team.mdx
+++ b/docs/docs/about/team.mdx
@@ -72,6 +72,12 @@ Do you want to know the curious and bright minds behind the CLI for Microsoft 36
 
 <TeamCardOverview individuals={[
   {
+    name: 'Aaron Junker',
+    company: '',
+    github: 'Aaron-Junker',
+    x: 'theredcuber'
+  },
+  {
     name: 'Aakash Bhardwaj',
     company: '',
     github: 'aakashbhardwaj619',
@@ -742,6 +748,12 @@ Do you want to know the curious and bright minds behind the CLI for Microsoft 36
     company: 'IW',
     github: 'timdelavoorde',
     x: ''
+  },
+  {
+    name: 'Tobias Maestrini',
+    company: 'bee365 ag',
+    github: 'tmaestrini',
+    x: 'tmaestrini'
   },
   {
     name: 'Trygvi Zachariassen Laksafoss',
