Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -35,6 +35,10 @@ sidebar_position: 4
 - fixed anomalies for 'tenant people profilecardproperty' commands
 - added new script sample that lists information on decluttering teams
 - updated contributing docs adding codespaces and dev container page [#5206](https://github.com/pnp/cli-microsoft365/issues/5206)
+- renamed 'search externalconnection' commands to 'external connection'. [#5531](https://github.com/pnp/cli-microsoft365/issues/5531)
+- added util for retrieving administrative units. [#5619](https://github.com/pnp/cli-microsoft365/issues/5619)
+- fixed docs component imports
+- added thumbnail option to 'spo site set'. [#5495](https://github.com/pnp/cli-microsoft365/issues/5495)
 
 ## [v7.1.0](https://github.com/pnp/cli-microsoft365/releases/tag/v7.1.0)
 
