--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -40,6 +40,7 @@ sidebar_position: 4
 - fixed docs component imports
 - added thumbnail option to 'spo site set'. [#5495](https://github.com/pnp/cli-microsoft365/issues/5495)
 - refactored inquirer to new package structure. [#5510](https://github.com/pnp/cli-microsoft365/issues/5510)
+- extended 'team user app remove' command with --userName (UPN). [#544](https://github.com/pnp/cli-microsoft365/issues/5446)
 
 ## [v7.1.0](https://github.com/pnp/cli-microsoft365/releases/tag/v7.1.0)
 
