--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -41,6 +41,16 @@ sidebar_position: 4
 - added thumbnail option to 'spo site set'. [#5495](https://github.com/pnp/cli-microsoft365/issues/5495)
 - refactored inquirer to new package structure. [#5510](https://github.com/pnp/cli-microsoft365/issues/5510)
 - extended 'team user app remove' command with --userName (UPN). [#544](https://github.com/pnp/cli-microsoft365/issues/5446)
+- extended 'spfx project upgrade' with support for v1.18.1 [#5645](https://github.com/pnp/cli-microsoft365/issues/5645)
+- extended 'spfx doctor' with support for v1.18.1 [#5645](https://github.com/pnp/cli-microsoft365/issues/5645)
+- extended 'spfx project doctor' with support for v1.18.1 [#5645](https://github.com/pnp/cli-microsoft365/issues/5645)
+- fixed bug where 'flow environment list' did not return information. [#5583](https://github.com/pnp/cli-microsoft365/issues/5583)
+- updated links in the documentation to learn.microsoft.com
+- updated project & docs dependencies.
+- enhanced CLI performance and added timings to the debug output.
+- fixed wait in 'spo tenant recyclebinitem restore'. [#5504](https://github.com/pnp/cli-microsoft365/issues/5504)
+- extended spo site add command with --withAppCatalog flag. [#5386](https://github.com/pnp/cli-microsoft365/issues/5386)
+- updated the spfx workflow add command. [#5566](https://github.com/pnp/cli-microsoft365/issues/5566)
 
 ## [v7.1.0](https://github.com/pnp/cli-microsoft365/releases/tag/v7.1.0)
 
