New Command: aad app permission add

--- a/docs/docs/cmd/aad/app/app-permission-add.mdx
+++ b/docs/docs/cmd/aad/app/app-permission-add.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 
 # aad app permission add
 
-Adds the specified application and/or delegated permissions to a specified Entra ID app
+Adds the specified application and/or delegated permissions to a specified Entra ID (Azure AD) app
 
 ## Usage
 
@@ -16,10 +16,10 @@ m365 aad app permission add [options]
 
 ```md definition-list
 `-i, --appId [appId]`
-: Client ID of the Entra ID app to add the API permissions to. Specify `appId` or `appObjectId` but not both.
+: Client ID of the Entra ID (Azure AD) app to add the API permissions to. Specify `appId` or `appObjectId` but not both.
 
 `-o, --appObjectId [appObjectId]`
-: Object ID of the Entra ID app to add the API permissions to. Specify `appId` or `appObjectId` but not both.
+: Object ID of the Entra ID (Azure AD) app to add the API permissions to. Specify `appId` or `appObjectId` but not both.
 
 `-a, --applicationPermission [applicationPermission]`
 : Space-separated list of application permissions to add. Specify at least `applicationPermission` or `delegatedPermission`.
@@ -39,19 +39,19 @@ Scopes/Roles to grant must be fully-qualified so that we can disambiguate them b
 
 ## Examples
 
-Grant multiple delegated API permissions to an Entra ID app specified by client id
+Grant multiple delegated API permissions to an Entra ID (Azure AD) app specified by client id
 
 ```sh
 m365 aad app permission add --appId 'f1417aa3-bf0b-4cc5-a845-a0b2cf11f690' --delegatedPermission 'https://management.azure.com/user_impersonation https://service.flow.microsoft.com/Flows.Read.All https://graph.microsoft.com/Agreement.Read.All'
 ```
 
-Grant multiple delegated API permissions to an Entra ID app specified by object id
+Grant multiple delegated API permissions to an Entra ID (Azure AD) app specified by object id
 
 ```sh
 m365 aad app permission add --appObjectId 'e0306bb2-bf0b-4cc5-a845-a0b2cf11f690' --delegatedPermission 'https://management.azure.com/user_impersonation https://service.flow.microsoft.com/Flows.Read.All https://graph.microsoft.com/Agreement.Read.All'
 ```
 
-Grant multiple app-only permissions to an Entra ID app specified by client id and grant admin consent
+Grant multiple app-only permissions to an Entra ID (Azure AD) app specified by client id and grant admin consent
 
 ```sh
 m365 aad app permission add --appId 'f1417aa3-bf0b-4cc5-a845-a0b2cf11f690' --applicationPermission 'https://graph.microsoft.com/Sites.FullControl.All https://microsoft.sharepoint-df.com/Sites.FullControl.All' --grandAdminConsent
