Update sample script to upload files and folders
Fixed issue where item path was passed as parameter instead of item name

--- a/docs/docs/sample-scripts/spo/upload-local-files-and-folder/index.mdx
+++ b/docs/docs/sample-scripts/spo/upload-local-files-and-folder/index.mdx
@@ -30,7 +30,7 @@ This script shows how you can use the CLI to upload files located on a local fol
             $folderCreated = m365 spo folder add --webUrl $siteUrl --parentFolderUrl $sPFolderPath --name $item.Name
 
             Write-host "importing folder $item"
-            Import-FilesAndFolders  -folderPath $item.FullName -sPFolderPath "$sPFolderPath/$item" -siteUrl $siteUrl
+            Import-FilesAndFolders  -folderPath $item.FullName -sPFolderPath "$sPFolderPath/$($item.Name)" -siteUrl $siteUrl
           }
           else {
             Write-host "importing file $item"
