Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -51,6 +51,9 @@ sidebar_position: 4
 - fixed wait in 'spo tenant recyclebinitem restore'. [#5504](https://github.com/pnp/cli-microsoft365/issues/5504)
 - extended spo site add command with --withAppCatalog flag. [#5386](https://github.com/pnp/cli-microsoft365/issues/5386)
 - updated the spfx workflow add command. [#5566](https://github.com/pnp/cli-microsoft365/issues/5566)
+- updated spo retentionlabel commands to use bulk-endpoint. [#4633](https://github.com/pnp/cli-microsoft365/issues/4633)
+- added a config key to set the default login authType. [#5585](https://github.com/pnp/cli-microsoft365/issues/5585)
+- added content flag to 'spo sitescript get'. [#5549](https://github.com/pnp/cli-microsoft365/issues/5549)
 
 ## [v7.1.0](https://github.com/pnp/cli-microsoft365/releases/tag/v7.1.0)
 
