--- a/docs/docs/about/team.mdx
+++ b/docs/docs/about/team.mdx
@@ -38,7 +38,7 @@ Do you want to know the curious and bright minds behind the CLI for Microsoft 36
   },
   {
     name: 'Jasey Waegebaert',
-    company: 'WAE Consulting',
+    company: 'Xylos',
     github: 'Jwaegebaert',
     x: 'jwaegebaert'
   },
@@ -50,7 +50,7 @@ Do you want to know the curious and bright minds behind the CLI for Microsoft 36
   },
   {
     name: 'Milan Holemans',
-    company: 'VanRoey',
+    company: 'Xylos',
     github: 'milanholemans',
     x: ''
   },
@@ -66,16 +66,16 @@ Do you want to know the curious and bright minds behind the CLI for Microsoft 36
 
 <TeamCardOverview individuals={[
   {
-    name: 'Aaron Junker',
-    company: '',
-    github: 'Aaron-Junker',
-    x: 'theredcuber'
-  },
-  {
     name: 'Aakash Bhardwaj',
     company: '',
     github: 'aakashbhardwaj619',
     x: 'aakash_316'
+  },
+  {
+    name: 'Aaron Junker',
+    company: '',
+    github: 'Aaron-Junker',
+    x: 'theredcuber'
   },
   {
     name: 'Aaron Sotelo',
@@ -366,6 +366,12 @@ Do you want to know the curious and bright minds behind the CLI for Microsoft 36
     x: 'joakimhogberg'
   },
   {
+    name: 'Joel Rodrigues',
+    company: 'Storm Technology',
+    github: 'joelfmrodrigues',
+    x: 'joelFMRodrigues'
+  },
+  {
     name: 'John Rafael',
     company: '',
     github: 'jcads',
@@ -493,7 +499,7 @@ Do you want to know the curious and bright minds behind the CLI for Microsoft 36
   },
   {
     name: 'Nico De Cleyre',
-    company: 'Ordina Belgium',
+    company: 'Roboest aan de Leie',
     github: 'nicodecleyre',
     x: 'NicoDeCleyre'
   },
@@ -709,7 +715,7 @@ Do you want to know the curious and bright minds behind the CLI for Microsoft 36
   },
   {
     name: 'Stijn Haerkens',
-    company: 'VanRoey.be',
+    company: 'GMI Group',
     github: 'stijnhaerkenss',
     x: ''
   },
