Add missing force flag to docs

--- a/docs/docs/cmd/flow/run/run-cancel.mdx
+++ b/docs/docs/cmd/flow/run/run-cancel.mdx
@@ -21,6 +21,9 @@ m365 flow run cancel [options]
 
 `-e, --environmentName <environmentName>`
 : The name of the environment where the flow is located
+
+`-f, --force`
+: Don't prompt for confirmation
 ```
 
 <Global />
