Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -57,6 +57,12 @@ sidebar_position: 4
 - added the how it works page for spfx project upgrade.
 - extended 'spo sp grant revoke' with scope. [#5604](https://github.com/pnp/cli-microsoft365/issues/5604)
 - fixed where item path was passed as parameter instead of item name. [#5672](https://github.com/pnp/cli-microsoft365/issues/5672)
+- added support for SPFx v1.18.2. [#5690](https://github.com/pnp/cli-microsoft365/issues/5690)
+- added choice prompt for required autocomplete options. [#5561](https://github.com/pnp/cli-microsoft365/issues/5561)
+- fixed listitem batch add unhandled error. [#5685](https://github.com/pnp/cli-microsoft365/issues/5685)
+- fixed missing columns in CSV output. [#5684](https://github.com/pnp/cli-microsoft365/issues/5684)
+- updated spfx project doctor and upgrade commands. [#5679](https://github.com/pnp/cli-microsoft365/issues/5679)
+- added missing force flag to flow run cancel command
 
 ## [v7.1.0](https://github.com/pnp/cli-microsoft365/releases/tag/v7.1.0)
 
