--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -4,6 +4,19 @@ sidebar_position: 4
 
 # Release notes
 
+## v7.3.0
+
+### New commands
+
+**External content:**
+
+- [external connection doctor](../cmd/external/connection/connection-doctor.mdx) - checks if the external connection is correctly configured for use with a specified user experience in Microsoft 365 [#5675](https://github.com/pnp/cli-microsoft365/issues/5675)
+- [external item add](../cmd/external/item/item-add.mdx) - creates external item [#5530](https://github.com/pnp/cli-microsoft365/issues/5530)
+
+### Changes
+
+- extended 'teams user app remove' command with support for name option [#5447](https://github.com/pnp/cli-microsoft365/issues/5447)
+
 ## [v7.2.0](https://github.com/pnp/cli-microsoft365/releases/tag/v7.2.0)
 
 ### New commands
