Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -13,9 +13,16 @@ sidebar_position: 4
 - [external connection doctor](../cmd/external/connection/connection-doctor.mdx) - checks if the external connection is correctly configured for use with a specified user experience in Microsoft 365 [#5675](https://github.com/pnp/cli-microsoft365/issues/5675)
 - [external item add](../cmd/external/item/item-add.mdx) - creates external item [#5530](https://github.com/pnp/cli-microsoft365/issues/5530)
 
+**Microsoft Teams:**
+
+- [teams meeting add](../cmd/teams/meeting/meeting-add.mdx) - creates a new online meeting [#1345](https://github.com/pnp/cli-microsoft365/issues/1345)
+
 ### Changes
 
 - extended 'teams user app remove' command with support for name option [#5447](https://github.com/pnp/cli-microsoft365/issues/5447)
+- add extra validation for short options [#5657](https://github.com/pnp/cli-microsoft365/issues/5657)
+- extended the 'aad group list' command with a 'type' option [#5424](https://github.com/pnp/cli-microsoft365/issues/5424)
+- removed deprecated 'outputFile' options from report documentation [#5681](https://github.com/pnp/cli-microsoft365/issues/5681)
 
 ## [v7.2.0](https://github.com/pnp/cli-microsoft365/releases/tag/v7.2.0)
 
