Adds Gustavo Velez as contributor

--- a/docs/docs/about/team.mdx
+++ b/docs/docs/about/team.mdx
@@ -324,6 +324,12 @@ Do you want to know the curious and bright minds behind the CLI for Microsoft 36
     x: 'geoff4l'
   },
   {
+    name: 'Gustavo Velez',
+    company: '',
+    github: 'gavdgavd',
+    x: ''
+  },
+  {
     name: 'Hugo Bernier',
     company: 'Microsoft',
     github: 'hugoabernier',
