--- a/docs/docs/cmd/teams/user/user-app-add.mdx
+++ b/docs/docs/cmd/teams/user/user-app-add.mdx
@@ -13,8 +13,11 @@ m365 teams user app add [options]
 ## Options
 
 ```md definition-list
-`--id <id>`
+`--id [id]`
 : The ID of the app to install.
+
+`--name [name]`
+: Name of the app to install.
 
 `--userId <userId>`
 : The ID of the user to install the app for.
@@ -28,10 +31,16 @@ The `id` has to be the ID of the app from the Microsoft Teams App Catalog. Do no
 
 ## Examples
 
-Install an app from the catalog for the specified user.
+Install an app by id from the catalog for the specified user.
 
 ```sh
 m365 teams user app add --id 4440558e-8c73-4597-abc7-3644a64c4bce --userId 2609af39-7775-4f94-a3dc-0dd67657e900
+```
+
+Install an app by name from the catalog for the specified user.
+
+```sh
+m365 teams user app add --name HelloWorld --userId 2609af39-7775-4f94-a3dc-0dd67657e900
 ```
 
 ## Response
