--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -23,6 +23,7 @@ sidebar_position: 4
 - add extra validation for short options [#5657](https://github.com/pnp/cli-microsoft365/issues/5657)
 - extended the 'aad group list' command with a 'type' option [#5424](https://github.com/pnp/cli-microsoft365/issues/5424)
 - removed deprecated 'outputFile' options from report documentation [#5681](https://github.com/pnp/cli-microsoft365/issues/5681)
+- refactored codebase to remove Cli.getInstance()
 
 ## [v7.2.0](https://github.com/pnp/cli-microsoft365/releases/tag/v7.2.0)
 
